--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "jdjd",
-    "password": "hxjdhhdj",
+    "email": "",
+    "password": "",
     "2FASecret": "hxhjdjj",
     "i_user": "",
     "proxy": null,
